# appmarket

./: .gitignore  .mcp.json  CATALOG_PUBKEY.md  CLAUDE.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  index.json  index.json.sig  sources.json
.claude/: plugins.md  settings.json  statusline.sh
.claude/agents/: build-deploy-engineer.md  chart-qa-verifier.md  charting-expert.md  data-pipeline-engineer.md  deskmodal-design-agent.md  documentation-engineer.md  fdc3-protocol-engineer.md  frontend-architect.md  integration-architect.md  interaction-designer.md  maestro-orchestrator.md  marketplace-architect.md  marketplace-qa.md  marketplace-ux-engineer.md  npm-registry-engineer.md  orchestrator.md  plugin-sdk-engineer.md  qa-architect.md  rust-systems-architect.md  security-engineer.md  service-plugin-exemplar.md  style-bot.md  trading-sme.md  trading-ux-architect.md  ux-design-lead.md  verification-gateway-engineer.md
.claude/hooks/: bootstrap-plugins.sh  cbm-code-discovery-gate.sh  cbm-session-reminder.sh  cbm-update-latest.sh  commit-msg-wiki-trailer.sh  context-load.sh  file-changed-wiki-regen.sh  handoff-nudge.sh  instructions-loaded-audit.sh  no-chrome-terminology.sh  post-commit-handoff.sh  post-commit-wiki-ingest.sh  post-compact-restore.sh  post-merge-wiki-ingest.sh  pre-commit-guard.sh  pre-compact-dump.sh  push-nudge.sh  session-end-handoff.sh  stop-canonical-committed.sh  stop-failure-incident.sh  stop-tier-a-verify.sh  subagent-start-bound-budget.sh  subagent-stop-handoff.sh  subagent-stop.sh  task-completed-spec-flip.sh  task-created-spec-link.sh
.claude/memory/: MEMORY.md  ci_architecture.md  ci_remotes.md  feedback_bot_identity_naming.md  feedback_bundle_packaging.md  feedback_code_quality.md  feedback_deskmodal_scope.md  feedback_engineering.md  feedback_expert_agents.md  feedback_framework.md  feedback_gui_testing.md  feedback_inprocess_services.md  feedback_marketplace_repo.md  feedback_no_git_push.md  feedback_no_workarounds.md  feedback_sdk_only_access.md  feedback_speed.md  feedback_terse_updates.md  findings_a6_trading_expert.md  findings_service_sdk_audit.md  findings_wave1.md  findings_wave2_apps.md  findings_wave2_packages.md  handoff_active.md  issues_build_infra.md  knowledge_system.md  marketplace_phase_status.md  persona_completeness_auditor.md  phase0_patterns.md  phase0_progress.md  price-feed-diagnosis.md  process_recursive_review.md  project_desk_rename.md  project_icon_system.md  project_status.md  reference_agent_team.md  reference_deskmodal.md  reference_deskmodal_plugin_dev.md  user_role.md
.claude/rules/: adr-discipline.md  agent-team.md  agents.md  anthropic-alignment.md  architecture.md  copilot.md  core.md  discipline.md  honesty.md  no-deferrals.md  parallel-sessions.md  parallelism.md  production-code.md  quality.md  verification.md  (+1 more)
.codebase-memory/: adr.md
.github/: CODEOWNERS
brands/: README.md
crates/verification-gateway/: Cargo.toml
crates/verification-gateway/src/: config.rs  dispatch.rs  lib.rs  pipeline.rs  poll.rs  queue.rs
crates/verification-gateway/tests/: dispatch_intake.rs  poll_fallback.rs  publisher_registration_guard.rs
crates/verification-gateway/tests/common/: mod.rs
icons/: _SYSTEM.md
migrations/: 0001_gateway_init.sql
schema/: catalog-entry.json  chart-template.toml  indicator-pack.md  schema.md  v2.md
scripts/: aggregate.py  build_appmarket_catalog.py  install-plugins.sh  pod-apply.sh  setup.sh  validate_catalog.py  wave-sandbox.sh
wiki/: CLAUDE.md  index.md
(+576 files in other folders)
