[workspace]
resolver = "2"
members = [
    "crates/verification-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Desk-Modal/appmarket"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
unwrap_used = "warn"
panic = "warn"
todo = "deny"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "net"] }

# Web framework (gateway HTTP intake)
axum = { version = "0.7", features = ["json", "tokio", "http1", "macros"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1.5", features = ["server", "http1"] }

# HTTP client (GitHub Releases poll)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database — SQLite for dev, Postgres schema parity for prod
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

# Crypto — HMAC-SHA256 for dispatch-token verification
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
hex = "0.4"

# Time
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# URL parsing
url = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
